fix(web): Wrap content on developers page

--- a/public/main.css
+++ b/public/main.css
@@ -117,6 +117,8 @@ ul.resources>li {
   padding: 0.5rem;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 0.3rem;
   align-items: baseline;
 }
 
